added images and cart fucntionality

--- a/UI-Angular/src/app/components/home/home.component.html
+++ b/UI-Angular/src/app/components/home/home.component.html
@@ -22,7 +22,7 @@
             </div>
         </div>
     </div>
-    <app-modal *ngIf="modalService.isShowingWaterPointDetails$| async" title="Water Point">
+    <app-modal *ngIf="modalService.isShowingWaterPointDetails$| async" title="Water Point info">
         <app-water-point-info></app-water-point-info>
     </app-modal>
 
