--- a/UI-Angular/src/app/components/water-point-info/water-point-info.component.css
+++ b/UI-Angular/src/app/components/water-point-info/water-point-info.component.css
@@ -8,19 +8,41 @@
     overflow:auto;
 }
 
-::-webkit-scrollbar {
-    width: 12px;
-    background-color: #F5F5F5;
+.photoDiv{
+    width: 90%;
+    height: 200px;
 }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color: #04C988;
+.photoPreview{
+    max-height: 200px;
+    max-width: 90%;
 }
+
+
 
 .itemsDiv{
     height: max-content;
     flex-direction: column;
     gap:15px;
+}
+
+.productsTitle{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.productsDiv{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+}
+
+.productItem{
+    width: 70%;
 }
