--- a/UI-Angular/src/app/components/water-point-item/water-point-item.component.css
+++ b/UI-Angular/src/app/components/water-point-item/water-point-item.component.css
@@ -5,3 +5,16 @@
     color: lightgrey;
     cursor: pointer;
 }
+
+.photoPreview{
+    max-width: 100%;
+    max-height: 100%;
+    border: 2px solid white;
+    border-radius: 2px;
+}
+
+.photoDiv{
+    justify-content: center;
+    align-items: center;
+    padding: 0px 10px 0px 0px;
+}
