--- a/UI-Angular/src/app/components/water-point-item/water-point-item.component.html
+++ b/UI-Angular/src/app/components/water-point-item/water-point-item.component.html
@@ -1,7 +1,18 @@
 <div class="container-fluid waterPointDiv">
-    <b>{{waterPoint.title}}</b><br>
-    Reviews: {{waterPoint.reviewIds.length}}<br>
-    Address: {{waterPoint.address}}<br>
-    Type: {{enumToString(waterPoint.waterPointType)}}<br>
-    Rating: {{waterPoint.rating}}/5 <img src="assets/icons/star.png" height="20px">
+
+    <div class="row">
+        <div class="col-8">
+            <b>{{waterPoint.title}}</b><br>
+            Reviews: {{waterPoint.reviewIds.length}}<br>
+            Address: {{waterPoint.address}}<br>
+            Type: {{enumToString(waterPoint.waterPointType)}}<br>
+            Rating: {{waterPoint.rating}}/5 <img src="assets/icons/star.png" height="20px">
+        </div>
+        <div class="photoDiv col-4 d-flex">
+            <img class="photoPreview" [src]="'/assets/images/'+getPhotoUrl()">
+        </div>
+    </div>
+
+
+    
 </div>
