--- a/UI-Angular/src/app/components/order-confirming/order-confirming.component.css
+++ b/UI-Angular/src/app/components/order-confirming/order-confirming.component.css
@@ -1,3 +1,16 @@
 .customConfirmationDiv{
     min-height: 800px;
 }
+
+.ordersContainer{
+    flex-direction: column;
+    gap:15px;
+}
+
+form{
+    padding: 20px 0px 50px 10px;
+}
+
+.validationFailed{
+    color:red;
+}
