--- a/UI-Angular/src/app/components/nav-menu/nav-menu.component.html
+++ b/UI-Angular/src/app/components/nav-menu/nav-menu.component.html
@@ -37,12 +37,12 @@
             </li>
 
 
-            <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="accountService.isRepresentative">
+            <!-- <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="accountService.isRepresentative">
             <li class="nav-item" [routerLinkActive]="['link-active']">
                 <a class="nav-link text-dark" [routerLink]="['/manage-water-points']"
                     >Water points</a
                 >
-            </li>
+            </li> -->
 
             <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="accountService.isAdmin">
                 <a class="nav-link text-dark" [routerLink]="['/verification-documents']"
