Added functionality to add order

--- a/UI-Angular/src/app/components/login/login.component.html
+++ b/UI-Angular/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
     </form>
 
 
-    <!-- <button class="btn btn-link linkButton" [routerLink]="['/registration']" >
+    <button class="btn btn-link linkButton" [routerLink]="['/registration']" >
         If you are not registered press here
-    </button> -->
+    </button>
 </div>
