--- a/UI-Angular/src/app/components/order-confirming-item/order-confirming-item.component.html
+++ b/UI-Angular/src/app/components/order-confirming-item/order-confirming-item.component.html
@@ -8,8 +8,8 @@
         <b>Total price:</b> {{item.totalPrice}}<br>
     </div>
 
-    <div class="col-3">
+    <!-- <div class="col-3">
         <button class="btn btn-danger" (click)="deleteItem()">X</button>
-    </div>
+    </div> -->
     
 </div>
