--- a/UI-Angular/src/app/components/water-point-info/water-point-info.component.css
+++ b/UI-Angular/src/app/components/water-point-info/water-point-info.component.css
@@ -46,3 +46,13 @@
 .productItem{
     width: 70%;
 }
+
+.newReview{
+    min-height: 60px;
+    max-height: fit-content;
+
+}
+
+form{
+    padding-top: 15px;
+}
